# pico-env-monitor

./: CMakeLists.txt  README.md  core1_entry.c  i2c_bb.pio  main.c  pio_i2c.h
include/: bme280.h  lwipopts.h
src/: bme280.c  main.c  pio_i2c.c
